# slogpy

./: LICENSE  README.md  REQUIREMENTS.md  pyproject.toml
.github/workflows/: release.yaml
slogpy/: __init__.py  __main__.py  progress.py  section.py  slog.py  syslogger.py  util.py
tests/: README.md  __init__.py  conftest.py  mytest.py  test  test_annoy_console.py  test_slogpy.py  test_slogpy_console.py  test_slogpy_console_debug.py  test_slogpy_file.py  test_slogpy_file_debug.py  test_slogpy_file_info.py
